--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header>
         <div class="pp-header">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container"><a href="index.html"><img src="images/favicon.png" alt="Logo"></a><a class="navbar-brand" href="index.html">Devika Manoj</a>
+            <div class="container"><a href="index.html"><img src="images/favicon.png" alt="Logo"></a><h2><b>Devika Manoj</b></h2>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav ml-auto">
@@ -57,55 +57,27 @@
 <div class="container px-0">
   <div class="pp-gallery">
     <div class="card-columns">
-      <div class="card" data-groups="[&quot;nature&quot;]"><a href="image-detail.html">
+      <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/1-nature.jpg" alt="Nature"/>
-            <figcaption>
-              <div class="h4">Forest</div>
-              <p>Nature</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;nature&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/2-nature.jpg" alt="Nature"/>
-            <figcaption>
-              <div class="h4">Bird</div>
-              <p>Nature</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;nature&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/4-nature.jpg" alt="Nature"/>
-            <figcaption>
-              <div class="h4">Sunrise</div>
-              <p>Nature</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;nature&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/5-nature.jpg" alt="Nature"/>
-            <figcaption>
-              <div class="h4">Greenery</div>
-              <p>Nature</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;nature&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/8-nature.jpg" alt="Nature"/>
-            <figcaption>
-              <div class="h4">Bird</div>
-              <p>Nature</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;nature&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/9-nature.jpg" alt="Nature"/>
-            <figcaption>
-              <div class="h4">Flower</div>
-              <p>Nature</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;people&quot; , &quot;nature&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/10-people.jpg" alt="People"/>
-            <figcaption>
-              <div class="h4">Model</div>
-              <p>People</p>
-            </figcaption>
-          </figure></a></div>
+          </figure></div>
       <div class="card" data-groups="[&quot;people&quot;]"><a href="image-detail.html">
           <figure class="pp-effect"><img class="img-fluid" src="images/11-people.jpg" alt="People"/>
             <figcaption>
@@ -134,48 +106,37 @@
               <p>People</p>
             </figcaption>
           </figure></a></div>
-      <div class="card" data-groups="[&quot;people&quot; , &quot;nature&quot;]"><a href="image-detail.html">
+      <div class="card" data-groups="[&quot;people&quot;]"><a href="image-detail.html">
           <figure class="pp-effect"><img class="img-fluid" src="images/17-people.jpg" alt="People"/>
             <figcaption>
               <div class="h4">Model</div>
               <p>People</p>
             </figcaption>
           </figure></a></div>
-      <div class="card" data-groups="[&quot;computer&quot;]"><a href="image-detail.html">
+      <div class="card" data-groups="[&quot;computer&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/18-computer.jpg" alt="Computer"/>
-            <figcaption>
-              <div class="h4">Laptop</div>
-              <p>Computer</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;computer&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;computer&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/19-computer.jpg" alt="Computer"/>
-            <figcaption>
-              <div class="h4">Laptop</div>
-              <p>Computer</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;computer&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;computer&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/20-computer.jpg" alt="Computer"/>
-            <figcaption>
-              <div class="h4">Laptop</div>
-              <p>Computer</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;computer&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;computer&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/23-computer.jpg" alt="Computer"/>
-            <figcaption>
-              <div class="h4">Laptop</div>
-              <p>Computer</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;computer&quot;]"><a href="image-detail.html">
+          </figure></div>
+      <div class="card" data-groups="[&quot;computer&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/24-computer.jpg" alt="Computer"/>
-            <figcaption>
-              <div class="h4">Laptop</div>
-              <p>Computer</p>
-            </figcaption>
-          </figure></a></div>
+          </figure></div>
+     <div class="card" data-groups="[&quot;computer&quot;]">
+            <figure class="pp-effect"><img class="img-fluid" src="images/25.jpg" alt="Computer"/>
+            </figure></div>   
+     <div class="card" data-groups="[&quot;computer&quot;]">
+              <figure class="pp-effect"><img class="img-fluid" src="images/26.jpg" alt="Computer"/>
+              </figure></div>  
+      <div class="card" data-groups="[&quot;computer&quot;]">
+                <figure class="pp-effect"><img class="img-fluid" src="images/27.jpg" alt="Computer"/>
+                </figure></div>  
       <div class="card" data-groups="[&quot;food&quot;]"><a href="image-detail.html">
           <figure class="pp-effect"><img class="img-fluid" src="images/26-food.jpg" alt="Food"/>
             <figcaption>
