--- a/about.html
+++ b/about.html
@@ -50,23 +50,49 @@
   <div class="h3 py-5 mt-5">Certificates</div>
   <div class="row pp-team">
     <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-1.jpg" alt="Face"/>
-      <div class="h5">Ashley Ford</div>
-      <p>Ceo/Founder</p>
     </div>
     <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-2.jpg" alt="Face"/>
-      <div class="h5">Royal Anwar</div>
-      <p>Photographer</p>
     </div>
     <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-3.jpg" alt="Face"/>
-      <div class="h5">Jina Sara</div>
-      <p>Web Developer</p>
     </div>
     <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-4.jpg" alt="Face"/>
-      <div class="h5">Adelle Charles</div>
-      <p>Web Developer</p>
+    </div>
+  </div>
+  <p></p>
+  <div class="row pp-team">
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-5.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-6.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-7.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-8.jpg" alt="Face"/>
+    </div>
+  </div>
+  <p></p>
+  <div class="row pp-team">
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-9.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-10.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-11.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-12.jpg" alt="Face"/>
     </div>
   </div>
 </div>
+<div class="h3 py-5 mt-5">Awards</div>
+  <div class="row pp-team">
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-13.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-14.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-15.jpg" alt="Face"/>
+    </div>
+    <div class="col-md-3 col-sm-12"><img class="img-fluid" src="images/face-16.jpg" alt="Face"/>
+    </div>
+  </div>
+
 <div class="pp-section"></div></div>
       </div>
     </div>
