--- a/blog.html
+++ b/blog.html
@@ -41,69 +41,65 @@
       <div class="page-content">
         <div class="container">
 <div class="pp-section pp-container-readable">
-  <article class="pp-post"><a href="blog-post.html"><img class="img-fluid" src="images/blog-1.jpg" alt="Blog Image"/></a>
+  <article class="pp-post"><a href="blog-post-davinci.html"><img class="img-fluid" src="images/blog-1.jpg" alt="Blog Image"/></a>
     <header class="pp-post-header">
-      <div class="pp-post-title"><a class="h4" href="blog-post.html">Healthy Meals for Busy Morning</a></div>
+      <div class="pp-post-title"><a class="h4" href="blog-post-davinci.html">Leonardo da Vinci</a></div>
       <div class="pp-post-meta">
         <ul>
-          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>November 04, 2017</span></li>
-          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Branding</span></a>, <a href="#"><span>Design</span></a></span></li>
-          <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">Comments</a></li>
+          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>May 15, 2021</span></li>
+          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Painter</span></a>, <a href="#"><span>Sculptor</span></a></span></li>
         </ul>
       </div>
     </header>
     <div class="pp-post-content">
-      <p>Whether you've just got a new camera and are looking to learn some new photography techniques or have been shooting for a while and want to master some old ones, this essential photographer's resource is here to help.</p>
+      <p>Leonardo da Vinci is arguably one of the greatest artists of the Renaissance period. He was a painter, sculptor, a musician as well as a scientist. His paintings of the ‘Virgin of the Rocks’, ‘The Last Supper’ and ‘Mona Lisa’ are considered some of the greatest masterpieces of art. He often employed new techniques in his paintings to give a fine feeling of reality.</p>
     </div>
-    <div class="pp-post-read-more"><a href="blog-post.html">Read More</a></div>
+    <div class="pp-post-read-more"><a href="blog-post-davinci.html">Read More</a></div>
   </article>
-  <article class="pp-post"><a href="blog-post.html"><img class="img-fluid" src="images/blog-2.jpg" alt="Blog Image"/></a>
+  <article class="pp-post"><a href="blog-post-michel.html"><img class="img-fluid" src="images/blog-2.jpg" alt="Blog Image"/></a>
     <header class="pp-post-header">
-      <div class="pp-post-title"><a class="h4" href="blog-post.html">Stay Healthy While Traveling</a></div>
+      <div class="pp-post-title"><a class="h4" href="blog-post-michel.html">Michelangelo</a></div>
       <div class="pp-post-meta">
         <ul>
-          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>November 04, 2017</span></li>
-          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Branding</span></a>, <a href="#"><span>Design</span></a></span></li>
-          <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">Comments</a></li>
+          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>May 15, 2021</span></li>
+          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Painter</span></a>, <a href="#"><span>Architect</span></a></span></li>
         </ul>
       </div>
     </header>
     <div class="pp-post-content">
-      <p>Whether you've just got a new camera and are looking to learn some new photography techniques or have been shooting for a while and want to master some old ones, this essential photographer's resource is here to help.</p>
+      <p>Michelangelo Buonarotti is considered one of the greatest artists of the Renaissance. He is looked at as an equal to Leonardo da Vinci and Rafael. He was a true Renaissance man; a poet, an artist, a sculptor and an architect.</p>
     </div>
-    <div class="pp-post-read-more"><a href="blog-post.html">Read More</a></div>
+    <div class="pp-post-read-more"><a href="blog-post-michel.html">Read More</a></div>
   </article>
-  <article class="pp-post"><a href="blog-post.html"><img class="img-fluid" src="images/blog-3.jpg" alt="Blog Image"/></a>
+  <article class="pp-post"><a href="blog-post-picasso.html"><img class="img-fluid" src="images/blog-3.jpg" alt="Blog Image"/></a>
     <header class="pp-post-header">
-      <div class="pp-post-title"><a class="h4" href="blog-post.html">Medicinal Uses of flowers</a></div>
+      <div class="pp-post-title"><a class="h4" href="blog-post-picasso.html">Pablo Picasso</a></div>
       <div class="pp-post-meta">
         <ul>
-          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>November 04, 2017</span></li>
-          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Branding</span></a>, <a href="#"><span>Design</span></a></span></li>
-          <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">Comments</a></li>
+          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>May 15, 2021</span></li>
+          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Painter</span></a>, <a href="#"><span>Sculptor</span></a></span></li>
         </ul>
       </div>
     </header>
     <div class="pp-post-content">
-      <p>Whether you've just got a new camera and are looking to learn some new photography techniques or have been shooting for a while and want to master some old ones, this essential photographer's resource is here to help.</p>
+      <p>Pablo Picasso is considered to be one of the most famous painters in the twentieth century. He was born in Malaga, Spain on October 20, 1881. In addition to painting, Picasso was also a printmaker, ceramicist, stage designer, poet and playwright. He spent most of his adult life in France.</p>
     </div>
-    <div class="pp-post-read-more"><a href="blog-post.html">Read More</a></div>
+    <div class="pp-post-read-more"><a href="blog-post-picasso.html">Read More</a></div>
   </article>
-  <article class="pp-post"><a href="blog-post.html"><img class="img-fluid" src="images/blog-4.jpg" alt="Blog Image"/></a>
+  <article class="pp-post"><a href="blog-post-vincent.html"><img class="img-fluid" src="images/blog-4.jpg" alt="Blog Image"/></a>
     <header class="pp-post-header">
-      <div class="pp-post-title"><a class="h4" href="blog-post.html">You can do anything if you believe</a></div>
+      <div class="pp-post-title"><a class="h4" href="blog-post-vincent.html">Vincent van Gogh</a></div>
       <div class="pp-post-meta">
         <ul>
-          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>November 04, 2017</span></li>
-          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Branding</span></a>, <a href="#"><span>Design</span></a></span></li>
-          <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">Comments</a></li>
+          <li><i class="fa fa-calendar-check-o" aria-hidden="true"></i><span>May 15, 2021</span></li>
+          <li><i class="fa fa-tags" aria-hidden="true"></i><span><a href="#"><span>Painter</span></a>, <a href="#"><span>Modern Art</span></a></span></li>
         </ul>
       </div>
     </header>
     <div class="pp-post-content">
-      <p>Whether you've just got a new camera and are looking to learn some new photography techniques or have been shooting for a while and want to master some old ones, this essential photographer's resource is here to help.</p>
+      <p>Vincent Van Gogh was born on 30 March 1853 in Zundert in the southern Netherlands, the son of a pastor. In 1869, he took his first job, working in the Hague branch of an international art dealing firm. Van Gogh is now one of the most well-known post-Impressionist painters, although he wasn't widely appreciated in his lifetime.</p>
     </div>
-    <div class="pp-post-read-more"><a href="blog-post.html">Read More</a></div>
+    <div class="pp-post-read-more"><a href="blog-post-vincent.html">Read More</a></div>
   </article>
   <div class="pp-pagination">
     <ul>
