--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
       <div class="h4">Address</div>
       <p>Meera Bhavan, Vedanvilla, Nalanchira P.O., Trivandrum</p>
       <p class="pt-5"><b>General Inquiries</b></p>
-      <p>meeramanu@gamil.com</p>
+      <p>meeramanu@gmail.com</p>
     </div>
     <div class="col-md-7 col-sm-12">
       <div class="pp-contact-message">
