--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="container px-0 py-4">
   <div class="pp-category-filter">
     <div class="row">
-      <div class="col-sm-12"><a class="btn btn-primary pp-filter-button" href="#" data-filter="all">All</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="people">Pencil Shading</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="nature">Painting</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="computer">Oil Pastels</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="food">Art</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="food">Others</a></div>
+      <div class="col-sm-12"><a class="btn btn-primary pp-filter-button" href="#" data-filter="all">All</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="people">Pencil Shading</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="nature">Painting</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="computer">Oil Pastels</a><a class="btn btn-outline-primary pp-filter-button" href="#" data-filter="food">Art</a></div>
     </div>
   </div>
 </div>
@@ -78,41 +78,45 @@
       <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/10-people.jpg" alt="People"/>
           </figure></div>
-      <div class="card" data-groups="[&quot;people&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/11-people.jpg" alt="People"/>
-            <figcaption>
-              <div class="h4">Cute</div>
-              <p>People</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;people&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/13-people.jpg" alt="People"/>
-            <figcaption>
-              <div class="h4">Model</div>
-              <p>People</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;people&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/14-people.jpg" alt="People"/>
-            <figcaption>
-              <div class="h4">Model</div>
-              <p>People</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;people&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/16-people.jpg" alt="People"/>
-            <figcaption>
-              <div class="h4">Model</div>
-              <p>People</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;people&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/17-people.jpg" alt="People"/>
-            <figcaption>
-              <div class="h4">Model</div>
-              <p>People</p>
-            </figcaption>
-          </figure></a></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/p1.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/p2.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/p3.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/p4.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/p5.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/p6.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/p7.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+         <figure class="pp-effect"><img class="img-fluid" src="images/p8.jpg" alt="People"/>
+        </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+        <figure class="pp-effect"><img class="img-fluid" src="images/p9.jpg" alt="People"/>
+        </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+        <figure class="pp-effect"><img class="img-fluid" src="images/p10.jpg" alt="People"/>
+        </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+        <figure class="pp-effect"><img class="img-fluid" src="images/p11.jpg" alt="People"/>
+        </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+        <figure class="pp-effect"><img class="img-fluid" src="images/p12.jpg" alt="People"/>
+        </figure></div>
+      <div class="card" data-groups="[&quot;people&quot;]">
+        <figure class="pp-effect"><img class="img-fluid" src="images/p3.jpg" alt="People"/>
+        </figure></div>
       <div class="card" data-groups="[&quot;computer&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/18-computer.jpg" alt="Computer"/>
           </figure></div>
@@ -137,41 +141,27 @@
       <div class="card" data-groups="[&quot;computer&quot;]">
                 <figure class="pp-effect"><img class="img-fluid" src="images/27.jpg" alt="Computer"/>
                 </figure></div>  
-      <div class="card" data-groups="[&quot;food&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/26-food.jpg" alt="Food"/>
-            <figcaption>
-              <div class="h4">Fruit Salad</div>
-              <p>Food</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;food&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/27-food.jpg" alt="Food"/>
-            <figcaption>
-              <div class="h4">Oranges</div>
-              <p>Food</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;food&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/28-food.jpg" alt="Food"/>
-            <figcaption>
-              <div class="h4">Lemon Tea</div>
-              <p>Food</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;food&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/29-food.jpg" alt="Food"/>
-            <figcaption>
-              <div class="h4">Pasta</div>
-              <p>Food</p>
-            </figcaption>
-          </figure></a></div>
-      <div class="card" data-groups="[&quot;food&quot;]"><a href="image-detail.html">
-          <figure class="pp-effect"><img class="img-fluid" src="images/30-food.jpg" alt="Food"/>
-            <figcaption>
-              <div class="h4">Burger</div>
-              <p>Food</p>
-            </figcaption>
-          </figure></a></div>
+      <div class="card" data-groups="[&quot;food&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/art1.jpg" alt="Food"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;food&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/art2.jpg" alt="Food"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;food&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/art3.jpg" alt="Food"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;food&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/art4.jpg" alt="Food"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;food&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/art5.jpg" alt="Food"/>
+          </figure></div>
+       <div class="card" data-groups="[&quot;food&quot;]">
+           <figure class="pp-effect"><img class="img-fluid" src="images/art6.jpg" alt="Food"/>
+          </figure></div>
+       <div class="card" data-groups="[&quot;food&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/art7.jpg" alt="Food"/>
+         </figure></div>
     </div>
   </div>
 </div>
