photo added - painting

--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
       <div class="card" data-groups="[&quot;nature&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/10-people.jpg" alt="People"/>
           </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/11-people.jpg" alt="People"/>
+          </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
+          <figure class="pp-effect"><img class="img-fluid" src="images/12-people.jpg" alt="People"/>
+           </figure></div>
+      <div class="card" data-groups="[&quot;nature&quot;]">
+           <figure class="pp-effect"><img class="img-fluid" src="images/13-people.jpg" alt="People"/>
+          </figure></div>
       <div class="card" data-groups="[&quot;people&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/p1.jpg" alt="People"/>
           </figure></div>
@@ -115,7 +124,7 @@
         <figure class="pp-effect"><img class="img-fluid" src="images/p12.jpg" alt="People"/>
         </figure></div>
       <div class="card" data-groups="[&quot;people&quot;]">
-        <figure class="pp-effect"><img class="img-fluid" src="images/p3.jpg" alt="People"/>
+        <figure class="pp-effect"><img class="img-fluid" src="images/p13.jpg" alt="People"/>
         </figure></div>
       <div class="card" data-groups="[&quot;computer&quot;]">
           <figure class="pp-effect"><img class="img-fluid" src="images/18-computer.jpg" alt="Computer"/>
