--- a/image-detail.html
+++ b/image-detail.html
@@ -20,11 +20,11 @@
       <header>
         <div class="pp-header">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container"><a href="index.html"><img src="images/favicon.png" alt="Logo"></a><a class="navbar-brand" href="index.html">Photo Perfect</a>
+            <div class="container"><a href="index.php"><img src="images/favicon.png" alt="Logo"></a><a class="navbar-brand" href="index.php">Photo Perfect</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav ml-auto">
-                  <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
+                  <li class="nav-item"><a class="nav-link" href="index.php">Home</a>
                   </li>
                   <li class="nav-item"><a class="nav-link" href="about.html">About</a>
                   </li>
